--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -43,7 +43,7 @@
       font-weight: 300;
       text-decoration: none;
       color: #000000;
-      font-size: 16px;
+      font-size: 14px;
     }
   }
 }
@@ -98,6 +98,7 @@
 .cart-icon-wrapper {
   position: relative;
   display: inline-block;
+  margin-left: 30px;
 }
 
 .cart-badge {
