--- a/src/css/CheckoutForm.scss
+++ b/src/css/CheckoutForm.scss
@@ -1,7 +1,6 @@
 .checkout-section {
-  margin-top: 50px;
-  margin-left: 80px;
-  margin-bottom: 100px;
+  max-width: 1280px;
+  margin: 50px auto 100px auto;
 }
 
 .checkout-title {
