--- a/src/css/CartPage.scss
+++ b/src/css/CartPage.scss
@@ -1,9 +1,9 @@
 .cart-title {
+  max-width: 1280px;
   font-size: 28px;
-  margin-bottom: 40px;
+  margin: 0 auto 40px auto;
   font-family: "Inter";
   font-weight: bold;
-  margin-left: 80px;
 }
 
 .cart-item-image {
@@ -47,8 +47,7 @@
   border-collapse: collapse;
 
   width: 1280px;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin: 0 auto;
 }
 
 .cart-table th,
