--- a/src/css/CategoryPage.scss
+++ b/src/css/CategoryPage.scss
@@ -1,16 +1,17 @@
 .category-title {
+  max-width: 1280px;
   font-family: "Inter";
   font-size: 32px;
   font-weight: bold;
-  margin-top: 50px;
-  margin-left: 80px;
+  margin: 50px auto;
 }
 
 .products-section {
+  max-width: 1280px;
+  margin: 60px auto;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 30px 20px; // 30px по вертикали, 20px по горизонтали
-  margin: 60px 80px;
 
   a {
     text-decoration: none;
