--- a/src/css/CategorySlider.scss
+++ b/src/css/CategorySlider.scss
@@ -1,153 +1,154 @@
 @font-face {
-    font-weight: 700;
-    font-family: "Inter";
-    src: url("../fonts/Inter_18pt-Bold.ttf");
-  }
+  font-weight: 700;
+  font-family: "Inter";
+  src: url("../fonts/Inter_18pt-Bold.ttf");
+}
 
-  @font-face {
-    font-weight: 600;
-    font-family: "Inter";
-    src: url("../fonts/Inter_18pt-SemiBold.ttf");
-  }
+@font-face {
+  font-weight: 600;
+  font-family: "Inter";
+  src: url("../fonts/Inter_18pt-SemiBold.ttf");
+}
 
 .category-slider-container {
-    padding: 20px 0 90px 0;
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .slider-title {
-    display: inline-flex;
-    align-items: center;
-    text-align: left;
-    margin-bottom: 50px;
-    margin-left: 80px;
-    font-size: 32px;
-    font-family: 'Inter';
-    font-weight: bold;
-    gap: 20px
-  }
-  
-  .slider-wrapper {
-    display: flex;
-    align-items: center;
-    position: relative;
-  }
-  
-  .cards-scroll-container {
-    width: calc(100% - 160px);
-    margin: 0 auto;
-    overflow-x: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
-  
-  .cards-track {
-    display: inline-flex;
-    gap: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-  
-  .category-card {
-    flex: 0 0 250px;
-    height: 240px;
-    background: white;
-    border-radius: 20px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    z-index: 1;
-    cursor: pointer;
-    color: inherit;
-    text-decoration: none;
+  max-width: 1320px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
 
-    &:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-      }
-    
-    .card-image {
-      height: 150px;
-      object-fit: scale-down;
-      scale: 0.8;
-    }
-    
-    .card-title {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: 'Inter';   
-        font-weight: 600;     
-        margin: 0;
-        padding-top: 20px;
-        text-align: center;
-        font-size: 18px;
-        max-width: 250px;
-        height: 44px;
-    }
+.slider-title {
+  display: inline-flex;
+  align-items: center;
+  text-align: left;
+  margin-bottom: 50px;
+  font-size: 32px;
+  font-family: "Inter";
+  font-weight: bold;
+  gap: 20px;
+}
+
+.slider-wrapper {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.cards-scroll-container {
+  max-width: 1280px;
+  margin: 0 auto;
+  overflow-x: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.cards-track {
+  max-width: 1320px;
+  display: inline-flex;
+  gap: 20px;
+  padding: 40px 5px;
+  padding-left: 0;
+  box-sizing: border-box;
+  overflow: visible;
+}
+
+.category-card {
+  flex: 0 0 240px;
+  height: 240px;
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  z-index: 1;
+  cursor: pointer;
+  color: inherit;
+  text-decoration: none;
+
+  &:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
   }
 
-  .catalog-link {
-    color: #0d0d0d;
-    transition: color 0.3s ease;
-    position: relative;
-
-    &::after {
-      content: '';
-      position: absolute;
-      left: 80px;
-      bottom: -5px;
-      width: 0;
-      height: 1px;
-      background-color: #888;
-      transition: width 0.3s ease;
-    }
-  
-    &:hover {
-      color: #555;
-      
-      &::after {
-        width: 162px;
-      }
-    }
-  
-    &.active {
-      color: #888;
-    }
+  .card-image {
+    height: 150px;
+    object-fit: scale-down;
+    scale: 0.8;
   }
-  
-  .slider-arrow {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: white;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    border: 2px solid #ffffff;
-    font-weight: bold;
-    cursor: pointer;
-    flex-shrink: 0;
-    transition: all 0.3s ease;
+
+  .card-title {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
-    
-    &.left {
-      position: absolute;
-      left: 65px;
-    }
-    
-    &.right {
-      position: absolute;
-      right: 65px;
+    font-family: "Inter";
+    font-weight: 600;
+    margin: 0;
+    padding-top: 20px;
+    text-align: center;
+    font-size: 18px;
+    max-width: 250px;
+    height: 44px;
+  }
+}
+
+.catalog-link {
+  margin-left: 20px;
+  color: #0d0d0d;
+  transition: color 0.3s ease;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 80px;
+    bottom: -5px;
+    width: 0;
+    height: 1px;
+    background-color: #888;
+    transition: width 0.3s ease;
+  }
+
+  &:hover {
+    color: #555;
+
+    &::after {
+      width: 162px;
     }
   }
 
-  
+  &.active {
+    color: #888;
+  }
+}
+
+.slider-arrow {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  border: 2px solid #ffffff;
+  font-weight: bold;
+  cursor: pointer;
+  flex-shrink: 0;
+  transition: all 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+
+  &.left {
+    position: absolute;
+    left: 2px;
+  }
+
+  &.right {
+    position: absolute;
+    right: 2px;
+  }
+}
