--- a/src/css/Delivery.scss
+++ b/src/css/Delivery.scss
@@ -1,5 +1,5 @@
 .delivery-content {
-  width: calc(100% - 160px);
+  max-width: 1280px;
   margin: 0 auto;
   font-family: "Inter";
   line-height: 150%;
