--- a/src/css/FilterBar.scss
+++ b/src/css/FilterBar.scss
@@ -1,45 +1,43 @@
 .filter-bar {
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-    margin-right: 80px;
-    margin-left: 80px;
-    width: 1280px;
-    font-family: 'Inter';
+  display: flex;
+  align-items: center;
+  margin: 40px auto 0 auto;
+  max-width: 1280px;
+  font-family: "Inter";
+  font-weight: 300;
+  font-size: 16px;
+  position: relative;
+}
+
+.sort-label {
+  margin-left: 20px;
+}
+
+.price-section {
+  display: flex;
+  align-items: center;
+  margin-left: 150px;
+
+  .label {
+    margin-right: 30px;
     font-weight: 300;
-    font-size: 16px;
-    position: relative;
   }
-  
-  .sort-label {
-    margin-left: 20px;
+
+  .price-label {
+    margin: 0 10px 0 0;
   }
-  
-  .price-section {
-    display: flex;
-    align-items: center;
-    margin-left: 150px;
-  
-    .label {
-      margin-right: 30px;
-      font-weight: 300;
-    }
-  
-    .price-label {
-      margin: 0 10px 0 0;
-    }
-  
-    input {
-      width: 120px;
-      height: 30px;
-      background-color: #f3f3f3;
-      border: none;
-      outline: none;
-      padding: 0 10px;
-      margin-right: 15px;
-      font-family: 'Inter', sans-serif;
-      font-size: 14px;
-      font-weight: 300;
-      border-radius: 5px;
-    }
+
+  input {
+    width: 120px;
+    height: 30px;
+    background-color: #f3f3f3;
+    border: none;
+    outline: none;
+    padding: 0 10px;
+    margin-right: 15px;
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    border-radius: 5px;
   }
+}
