--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -11,7 +11,7 @@
 
 .footer {
   background-color: #f3f3f3;
-  width: calc(100% - 160px);
+  max-width: 1280px;
   padding-top: 40px;
   margin: 0 auto;
   display: flex;
