--- a/src/css/PartnersSection.scss
+++ b/src/css/PartnersSection.scss
@@ -16,7 +16,7 @@
   color: #e67549;
   font-size: 40px;
   font-weight: bold;
-  margin-bottom: 80px;
+  margin-top: 100px;
   text-align: center;
 }
 
