--- a/src/css/ProductPage.scss
+++ b/src/css/ProductPage.scss
@@ -5,7 +5,6 @@
 }
 
 .product-page {
-  display: flex;
   flex-direction: column;
 }
 
@@ -15,8 +14,10 @@
 }
 
 .product-content {
+  max-width: 1280px;
+  margin: 0 auto;
   display: flex;
-  align-items: flex-start;
+  align-items: start;
   gap: 50px;
 }
 
@@ -33,7 +34,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  margin-left: 80px;
 }
 
 .product-thumbnail {
