1st global fixes

--- a/src/css/Delivery.scss
+++ b/src/css/Delivery.scss
@@ -1,6 +1,6 @@
 .delivery-content {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0 auto 80px auto;
   font-family: "Inter";
   line-height: 150%;
 
