--- a/src/css/CatalogMenu.scss
+++ b/src/css/CatalogMenu.scss
@@ -108,8 +108,20 @@
   }
 
   &.open {
-    height: 55px;
     border-radius: 10px 10px 0 0;
+    width: 113px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 0;
+      width: 113px;
+      height: 76px;
+      background-color: #e67549;
+      border-radius: 0 0 50% 0;
+      z-index: -1;
+    }
   }
 }
 
@@ -137,7 +149,7 @@
     content: "";
     position: absolute;
     top: -9px;
-    left: 116px; // подогнано под правый край кнопки (можно скорректировать)
+    left: 112px;
     width: 10px;
     height: 10px;
     background: radial-gradient(
