--- a/src/css/Pagination.scss
+++ b/src/css/Pagination.scss
@@ -1,62 +1,71 @@
 .pagination-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 150px;
-  }
-  
-  .pagination {
-    display: flex;
-    align-items: center;
-    height: 25px;
-    justify-content: space-between;
-    position: relative;
-  }
-  
-  .arrow-btn {
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-  }
-  
-  .arrow-left {
-    width: 6px;
-    height: 11px;
-    fill: #333; // Цвет стрелочек
-  }
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 150px;
+}
 
-  .arrow-right {
-    width: 16px;
-    height: 16px;
-    fill: #333; // Цвет стрелочек
-  }
-  
-  .page-numbers {
-    display: flex;
-    align-items: center;
-  }
-  
-  .page-number {
-    width: 25px;
-    height: 25px;
-    background-color: #f3f3f3;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 10px;
-    border: 1px solid #000000;
-    cursor: pointer;
-  }
-  
-  .page-number.active {
-    background-color: #ddd;
-    border: 1px solid #bbb;
-  }
-  
-  .dots {
-    font-size: 18px;
-    margin: 0 10px;
-  }
+.pagination {
+  display: flex;
+  align-items: center;
+  height: 25px;
+  justify-content: space-between;
+  position: relative;
+}
+
+.arrow-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.arrow-left {
+  width: 6px;
+  height: 11px;
+  fill: #333; // Цвет стрелочек
+}
+
+.arrow-right {
+  width: 16px;
+  height: 16px;
+  fill: #333; // Цвет стрелочек
+}
+
+.page-numbers {
+  display: flex;
+  align-items: center;
+}
+
+.page-number {
+  width: 25px;
+  height: 25px;
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+  border: 1px solid #000000;
+  cursor: pointer;
+}
+
+.page-number.active {
+  background-color: #ddd;
+  border: 1px solid #bbb;
+}
+
+.dots {
+  font-size: 18px;
+  margin: 0 10px;
+  color: #000;
+  background: none;
+  border: none;
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: default;
+}
