--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -53,7 +53,7 @@
 
   &__contacts {
     display: flex;
-    align-items: center;
+    align-items: end;
 
     .contact-link {
       font-family: "Inter";
