--- a/src/css/CategorySlider.scss
+++ b/src/css/CategorySlider.scss
@@ -151,3 +151,48 @@
     right: 2px;
   }
 }
+
+@media (max-width: 768px) {
+  .slider-title {
+    margin-top: 0;
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .catalog-link {
+    &::after {
+      left: 0;
+    }
+
+    &:hover {
+      &::after {
+        width: 125px;
+      }
+    }
+  }
+
+  .category-card {
+    flex: 0 0 114px;
+    height: 114px;
+  }
+  .card-image {
+    height: 75px !important;
+  }
+
+  .card-title {
+    padding-top: 4px !important;
+    font-size: 10px !important;
+    max-width: 115px !important;
+    height: 24px !important;
+  }
+
+  .slider-arrow {
+    display: none;
+  }
+
+  .cards-track {
+    gap: 10px;
+    padding: 15px 30px 15px 10px;
+    margin-left: 10px;
+  }
+}
