--- a/src/css/CatalogMenu.scss
+++ b/src/css/CatalogMenu.scss
@@ -1,84 +1,3 @@
-// .catalog-wrapper {
-//   position: relative;
-//   display: inline-block;
-// }
-
-// .catalog-button {
-//   font-family: "Inter";
-//   width: auto;
-//   font-weight: 500;
-//   display: flex;
-//   align-items: center;
-//   background-color: #e67549;
-//   color: #ffffff;
-//   border: none;
-//   padding: 0 13px;
-//   height: 40px;
-//   border-radius: 10px 10px 10px 10px; // Скругления только сверху
-//   font-size: 14px;
-//   cursor: pointer;
-//   gap: 15px;
-//   margin-right: 15px;
-
-//   .icon {
-//     fill: white;
-//   }
-
-//   &:hover {
-//     opacity: 0.9;
-//   }
-// }
-
-// .catalog-menu {
-//   position: absolute;
-//   top: 40px; // высота кнопки
-//   left: 0;
-//   background-color: #e67549;
-//   width: 280px;
-//   border-radius: 0 20px 20px 20px;
-//   padding: 20px 0 10px;
-//   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-//   z-index: 10;
-//   overflow: hidden;
-
-//   // Псевдоэлемент для создания "выреза" под поиск
-//   &::before {
-//     content: "";
-//     position: absolute;
-//     top: -20px;
-//     right: -20px;
-//     width: 40px;
-//     height: 40px;
-//     background: #e67549;
-//     border-radius: 50%;
-//     z-index: -1;
-//   }
-
-//   ul {
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-
-//     li {
-//       padding: 15px 20px;
-//       color: #fff;
-//       font-weight: 400;
-//       font-size: 16px;
-//       font-family: "Inter";
-//       cursor: pointer;
-//       border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-
-//       &:hover {
-//         background-color: rgba(255, 255, 255, 0.1);
-//       }
-
-//       &:last-child {
-//         border-bottom: none;
-//       }
-//     }
-//   }
-// }
-
 .catalog-wrapper {
   margin-right: 15px;
   position: relative;
@@ -132,7 +51,7 @@
   width: 350px;
   background-color: #e67549;
   border-radius: 0 10px 10px 10px;
-  overflow: visible;
+  overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 100;
 
@@ -151,6 +70,7 @@
     padding-top: 3px;
     padding-bottom: 3px;
     transform: translateY(0);
+    overflow: visible;
   }
 
   &::after {
