--- a/src/css/CategoryList.scss
+++ b/src/css/CategoryList.scss
@@ -52,3 +52,41 @@
     color: inherit;
   }
 }
+
+@media (max-width: 768px) {
+  .category-list-container {
+    padding: 0;
+    margin-bottom: 100px;
+  }
+
+  .categories-cards {
+    grid-template-columns: repeat(3, 114px); // 4 карточки в строке
+    grid-gap: 10px; // Расстояние между карточками
+    max-width: calc(100% - 40px);
+    height: auto;
+  }
+
+  .categories-card {
+    height: 114px;
+    width: 114px;
+    box-sizing: border-box;
+    padding: 5px;
+  }
+
+  .categories-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px !important;
+    height: 24px;
+    margin-top: 5px;
+    max-width: 115px;
+    padding: 0 !important;
+  }
+
+  .categories-image {
+    height: 75px !important;
+    object-fit: scale-down !important;
+    scale: 0.8 !important;
+  }
+}
