--- a/src/css/OrderConfirmation.scss
+++ b/src/css/OrderConfirmation.scss
@@ -23,7 +23,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
-    margin-bottom: 50px;
+    margin: 0 auto 50px auto;
     width: 540px;
   }
 
