--- a/src/css/CategoryList.scss
+++ b/src/css/CategoryList.scss
@@ -28,9 +28,9 @@
 
   .categories-image {
     width: 100%;
-    height: 100%;
+    height: 230px;
     object-fit: contain; // Заполнение картинки по размеру карточки
-    scale: 0.7;
+    scale: 0.8;
   }
 
   .categories-name {
