--- a/src/css/CategorySlider.scss
+++ b/src/css/CategorySlider.scss
@@ -104,7 +104,7 @@
   &::after {
     content: "";
     position: absolute;
-    left: 80px;
+    left: 0;
     bottom: -5px;
     width: 0;
     height: 1px;
