--- a/src/css/CategoryPage.scss
+++ b/src/css/CategoryPage.scss
@@ -52,3 +52,11 @@
     transform: translateY(0);
   }
 }
+
+@media (max-width: 768px) {
+  .category-title {
+    font-size: 24px;
+    width: calc(100% - 40px);
+    margin: 20px auto 30px auto;
+  }
+}
