--- a/src/css/Brands.scss
+++ b/src/css/Brands.scss
@@ -78,11 +78,13 @@
   }
   .brand-buttons {
     gap: 20px;
+    margin-left: 20px;
   }
 
   .letter-group {
     h2 {
       margin-bottom: 20px;
+      margin-left: 20px;
       font-size: 20px;
     }
   }
