category page 90% mobilized

--- a/src/css/RequestButton.scss
+++ b/src/css/RequestButton.scss
@@ -19,3 +19,9 @@
     background-color: darken(#e67549, 10%);
   }
 }
+
+@media (max-width: 768px) {
+  .request-button {
+    display: none;
+  }
+}
