--- a/src/css/CategoryPage.scss
+++ b/src/css/CategoryPage.scss
@@ -59,4 +59,11 @@
     width: calc(100% - 40px);
     margin: 20px auto 30px auto;
   }
+
+  .products-section {
+    gap: 30px 10px;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 40px auto 50px auto;
+    max-width: calc(100% - 40px);
+  }
 }
