--- a/src/css/FilterBar.scss
+++ b/src/css/FilterBar.scss
@@ -41,3 +41,33 @@
     border-radius: 5px;
   }
 }
+
+@media (max-width: 768px) {
+  .filter-bar {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+    font-size: 14px;
+    margin: 20px auto 50px auto;
+  }
+
+  .price-section {
+    margin-left: 20px;
+
+    input {
+      width: 90px;
+    }
+
+    .label {
+      margin-right: 20px;
+    }
+  }
+
+  .sort-section {
+    margin-left: 20px;
+  }
+
+  .sort-label {
+    font-size: 14px;
+  }
+}
