--- a/src/css/ModalRequest.scss
+++ b/src/css/ModalRequest.scss
@@ -161,11 +161,50 @@
   .modal-content {
     width: calc(100% - 40px);
     padding: 20px;
+    box-sizing: border-box;
   }
 
   .modal-body {
+    display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+
+  .modal-product {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 15px;
+    border: none;
+    padding: 0;
+  }
+
+  .product-request-image {
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .product-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+  }
+
+  .product-name {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 120%;
+  }
+
+  .product-request-price {
+    margin-top: 8px;
+    font-size: 18px;
+    font-weight: 600;
   }
 
   .modal-form {
@@ -180,31 +219,5 @@
   .privacy,
   .submit-button {
     width: 100%;
-  }
-
-  .modal-product {
-    padding-left: 0;
-    border-left: none;
-    border-top: 1px solid #767676;
-    padding-top: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .product-request-image {
-    max-width: 150px;
-    max-height: 150px;
-  }
-
-  .product-name {
-    margin-top: 10px;
-    font-size: 14px;
-  }
-
-  .product-request-price {
-    margin-top: 10px;
-    font-size: 18px;
   }
 }
