--- a/src/css/ModalRequest.scss
+++ b/src/css/ModalRequest.scss
@@ -46,7 +46,7 @@
 .modal-title {
   text-align: center;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 600;
   margin-bottom: 40px;
   margin-top: 0;
 }
@@ -161,6 +161,11 @@
   .modal-content {
     width: calc(100% - 40px);
     padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .modal-title {
+    margin-bottom: 30px;
   }
 
   .modal-body {
@@ -180,8 +185,8 @@
   }
 
   .product-request-image {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 120px;
+    max-height: 120px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -211,8 +216,12 @@
   }
 
   .modal-form input {
-    width: 100%;
+    width: calc(100% - 20px);
     margin-right: 0;
+
+    :last-of-type {
+      margin-bottom: 20px;
+    }
   }
 
   .privacy,
