--- a/src/css/Legal.scss
+++ b/src/css/Legal.scss
@@ -44,3 +44,25 @@
   font-weight: 700;
   margin-bottom: 40px;
 }
+
+@media (max-width: 768px) {
+  .page-heading {
+    margin: 0 20px;
+  }
+
+  .legal-content {
+    width: calc(100% - 40px);
+
+    h3 {
+      font-size: 14px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+
+    li {
+      font-size: 14px;
+    }
+  }
+}
