SearchResults and a colors mobilized

--- a/src/css/CartPage.scss
+++ b/src/css/CartPage.scss
@@ -129,12 +129,14 @@
 
 .quantity-button .minus,
 .quantity-button .plus {
+  color: #000000 !important;
   font-size: 15px;
   width: 20px;
   text-align: center;
 }
 
 .quantity-button .quantity-now {
+  color: #000000 !important;
   min-width: 15px;
   text-align: center;
 }
