CartNotification close color fixed

--- a/src/css/CartNotification.scss
+++ b/src/css/CartNotification.scss
@@ -47,6 +47,7 @@
   background: none;
   border: none;
   font-size: 26px; // соответствует макету
+  color: #000000 !important;
   font-weight: 100;
   cursor: pointer;
   line-height: 1;
