variant-card color fixed

--- a/src/css/ProductPage.scss
+++ b/src/css/ProductPage.scss
@@ -113,6 +113,7 @@
 .variant-card {
   font-family: "Inter";
   font-size: 15px;
+  color: #000000 !important;
   font-weight: 400;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border: none;
