--- a/src/css/Searchbar.scss
+++ b/src/css/Searchbar.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   background-color: #e67549;
+  border: solid 1px #e67549;
   border-radius: 10px;
   overflow: hidden;
   height: 40px;
