--- a/src/css/CartPage.scss
+++ b/src/css/CartPage.scss
@@ -34,6 +34,10 @@
   vertical-align: top;
 }
 
+.cart-total-row {
+  border-bottom: none !important;
+}
+
 .total-quantity {
   text-align: center;
 }
