--- a/src/css/Breadcrumbs.scss
+++ b/src/css/Breadcrumbs.scss
@@ -25,3 +25,9 @@
     margin: 30px auto 40px auto !important;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .breadcrumbs {
+    margin-left: 20px;
+  }
+}
