--- a/src/css/CategoryList.scss
+++ b/src/css/CategoryList.scss
@@ -90,3 +90,33 @@
     scale: 0.8 !important;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .category-list-container {
+    width: calc(100% - 40px);
+    margin: 0 auto;
+    padding: 0;
+    margin-top: 50px;
+    margin-bottom: 100px;
+  }
+
+  .categories-cards {
+    grid-template-columns: repeat(4, 205px);
+    height: auto;
+    margin: auto;
+  }
+
+  .categories-card {
+    height: 205px;
+    width: 205px;
+  }
+
+  .categories-image {
+    height: 150px !important;
+  }
+
+  .categories-name {
+    font-size: 15px !important;
+    bottom: 0;
+  }
+}
