--- a/src/css/CategoryPage.scss
+++ b/src/css/CategoryPage.scss
@@ -67,3 +67,14 @@
     max-width: calc(100% - 40px);
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .category-title {
+    margin-left: 20px;
+  }
+
+  .products-section {
+    width: calc(100% - 40px);
+    box-sizing: border-box;
+  }
+}
