--- a/src/css/CategorySlider.scss
+++ b/src/css/CategorySlider.scss
@@ -196,3 +196,13 @@
     margin-left: 10px;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .cards-track {
+    margin-left: 10px;
+  }
+
+  .slider-arrow {
+    display: none;
+  }
+}
