--- a/src/css/Delivery.scss
+++ b/src/css/Delivery.scss
@@ -37,3 +37,13 @@
     }
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .page-heading {
+    margin-left: 20px;
+  }
+
+  .delivery-content {
+    width: calc(100% - 40px);
+  }
+}
