--- a/src/css/FilterBar.scss
+++ b/src/css/FilterBar.scss
@@ -71,3 +71,9 @@
     font-size: 14px;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .filter-bar {
+    margin-left: 20px;
+  }
+}
