--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -10,3 +10,9 @@
     margin: 30px auto 50px auto;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .home-banner {
+    width: calc(100vw - 40px);
+  }
+}
