--- a/src/css/InfoBlocksSection.scss
+++ b/src/css/InfoBlocksSection.scss
@@ -347,3 +347,53 @@
     margin: 0;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .right-image {
+    object-fit: contain;
+  }
+
+  .cards-and-image-wrapper {
+    width: calc(100% - 20px);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0; // gap убираем, чтобы использовать margin-right
+    margin-bottom: 100px;
+    padding: 0 20px; // немного воздуха у краёв
+  }
+
+  .info-left {
+    width: clamp(300px, 50vw, 630px);
+    flex: 1 1 auto;
+    max-width: 630px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    min-width: 300px; // чтобы не ушло слишком далеко
+  }
+
+  .small-card-title,
+  .big-card-title {
+    font-size: clamp(14px, 1.8vw, 18px) !important;
+  }
+
+  .card-text,
+  .big-card-text {
+    font-size: clamp(12px, 1.5vw, 16px) !important;
+  }
+
+  .info-card .card-text {
+    margin-top: 0;
+  }
+
+  .dark-text-block {
+    width: calc(100% - 40px);
+  }
+
+  .dark-block-text {
+    width: calc(100% - 40px);
+    height: auto;
+  }
+}
