--- a/src/css/Legal.scss
+++ b/src/css/Legal.scss
@@ -66,3 +66,13 @@
     }
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .page-heading {
+    margin-left: 20px;
+  }
+
+  .legal-content {
+    width: calc(100% - 40px);
+  }
+}
