--- a/src/css/SubcategoriesBlock.scss
+++ b/src/css/SubcategoriesBlock.scss
@@ -84,3 +84,9 @@
 .subcategory-divider {
   margin-top: 0;
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .subcategories-block {
+    width: calc(100% - 40px);
+  }
+}
