--- a/src/css/ProductPage.scss
+++ b/src/css/ProductPage.scss
@@ -346,3 +346,16 @@
     width: 100%;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .product-main-image {
+    margin-left: 20px;
+    width: 400px;
+    height: 400px;
+
+    img {
+      width: 400px;
+      height: 400px;
+    }
+  }
+}
