--- a/src/css/CheckoutForm.scss
+++ b/src/css/CheckoutForm.scss
@@ -161,3 +161,13 @@
     padding: 12px 20px;
   }
 }
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .checkout-section {
+    width: calc(100% - 40px);
+  }
+
+  .checkout-form {
+    gap: 100px;
+  }
+}
